# WolfAgent

./: .gitignore  AGENTS.md  README.md  _audit_identity.json  _check_openers.py  _diag.py  _encoding_test.txt  _extra.txt  _extra_full.txt  _final_verify.py  _fix_encoding.py  _fix_loop.py  _fix_v5_a.py  _fix_wolf_chat.py  _p2.py  _p2b.py  _p3.py  _split_night.py  _sse3.py  _sse_final.py  _test.py  _test_sse.py  _wolf_sug_debug.txt  fix_encoding.py  frontend.py  main.py  pyproject.toml  start_backend.bat  start_frontend.bat  start_order.txt  发言完整内容.txt  后端log.txt
app/: config.py  database.py  graph.py  graph.py.bak2  models.py  players.py  players.py.bak  prompts.py  prompts.py.bak  tools.py
app/resource/: чЛ╝ф║║цЭАAgent.md  狼人杀Agent.md
backup_20260704_185205/: PlayerCard.tsx  Timeline.tsx  client.ts  game.ts  graph.py  main.py  models.py  players.py  prompts.py  useSSE.ts  vite.config.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.bak
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  client.ts.bak
frontend/src/components/: AuthModal.tsx  GameOverModal.tsx  GodAnnouncement.tsx  HomePage.tsx  LastWords.tsx  Layout.tsx  NightLog.tsx  PhaseBanner.tsx  Sidebar.tsx  SpeechesPanel.tsx  Timeline.tsx  Timeline.tsx.bak  VotesPanel.tsx
frontend/src/components/inputs/: LastWordsInput.tsx  SeerInput.tsx  SpeechController.tsx  (+5 more)
frontend/src/context/: GameContext.tsx
frontend/src/hooks/: useSSE.ts  useSSE.ts.bak  useSpeech.tsx
frontend/src/types/: game.ts
frontend/src/utils/: format.ts  role.ts
(+2 files in other folders)
